<resources>
    <string name="author">Developed by Researchers from:</string>
    <string name="app_name">Wehe</string>
    <string name="dashboard_page_title">Dashboard</string>
    <string name="results_page_title">Results</string>
    <string name="action_history">Result History</string>
    <string name="action_help">Help</string>
    <string name="main_page_title">Select Applications</string>
    <string name="next_button">Next</string>
    <string name="selected">Selected</string>
    <string name="back_button">Back</string>
    <string name="replay_page_title">Running Tests</string>
    <string name="tomography_page_title">Localizing Differentiation</string>
    <string name="replay">CLICK HERE TO PROCEED</string>
    <string name="title_activity_replay">Loading…</string>
    <string name="title_activity_crash">Crash Activity</string>
    <string name="image_name">App image</string>
    <string name="Viber">Viber</string>
    <string name="status_error">Error completing the replay</string>
    <string name="pending">Waiting to start</string>
    <string name="dashboard_url">https://wehe.meddle.mobi/globalStats.html</string>
    <string name="start_replay">Starting the replay</string>
    <string name="processing">Processing trace</string>
    <string name="vpn">Trying to connect to VPN</string>
    <string name="disconnect_vpn">Disconnecting VPN</string>
    <string name="random">Starting random replay</string>
    <string name="load_q">Loading the data to send</string>
    <string name="create_side_channel">Creating side channel</string>
    <string name="ask4permission">Asking for permission</string>
    <string name="receive_server_port_mapping">Receiving server port mapping</string>
    <string name="receive_sender_count">Receiving UDP information</string>
    <string name="create_tcp_client">Creating all TCP client sockets</string>
    <string name="create_udp_client">Creating all UDP client sockets</string>
    <string name="run_notf">Starting side channel notifier</string>
    <string name="run_receiver">Starting the Receiver process</string>
    <string name="run_sender">Running the Sender process</string>
    <string name="send_done">Notifying server that replay is complete</string>
    <string name="send_jitter">Sending the jitter statistics</string>
    <string name="receive_result">Receiving results</string>
    <string name="crash_toast_text">Sending report for improvement</string>
    <string name="crash_activity_title">Press back button to exit!</string>
    <string name="downloading">Downloading File</string>
    <string name="replay_aborted">Replay aborted</string>
    <string name="simple_error">Error</string>
    <string name="vpn_connect">Trying to connect VPN</string>
    <string name="vpn_failed">Failed to connect VPN</string>
    <string name="appResultButton">Results</string>
    <string name="setting">Settings</string>
    <string name="log">Log</string>
    <string name="xputOriginal">%1$s Throughput</string>
    <string name="xputTest">Non-%1$s Throughput</string>
    <string name="xputTooltip">Achievable throughput is the throughput this app gets when its
        traffic is not manipulated</string>
    <string name="error_page_title">An error occurred</string>
    <string name="errMsg">Sorry, the app crashed. A crash log will be sent to our server. Sorry for the inconvenience!</string>
    <string name="timing_label">Enable Inter-packet Timing?</string>
    <string name="timing_Yes">true</string>
    <string name="timing_No">false</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="server_label">Select Server</string>
    <string name="cust_server">Custom Server</string>
    <string name="inval_percent">Must be integer between 0 and 100</string>
    <string name="inval_server">Invalid server name</string>
    <string name="select_iteration">Select Iteration Times</string>
    <string name="select_metric">Select Which Metric to Use</string>
    <string name="select_a_threshhold">Select Area Test Threshold Percentage</string>
    <string name="select_ks2pvalue_threshhold">Select KS2 P Value Test Threshold Percentage</string>
    <string name="metric_a">Area test</string>
    <string name="metric_ks2p">KS2 P Value</string>
    <string name="metric_both">Both</string>
    <string name="metric_either">Either</string>
    <string name="select_random">Check me if you also want to run random replay for each application</string>
    <string name="select_test">Check me for testing purpose</string>
    <string name="select_confirmation_replay">Run multiple replays to confirm differentiation</string>
    <string name="default_settings">Use default values for thresholds</string>
    <string name="force_add_header">Check me to enable special identification header in all networks</string>
    <string name="replay_finished_title">Replays Finished!</string>
    <string name="replay_size">Size: %1$d x %2$d MB</string>
    <string name="replay_time">Time: %d seconds</string>
    <string name="install_cert_label">Click the button below if you want to reinstall the credential. Please leave the password field empty and click "OK"!</string>
    <string name="install_cert_button">Reinstall credential</string>
    <string name="consent_form_title">Consent Form</string>
    <string name="pref_title_default">Use defaults</string>
    <string name="pref_summary_default">Use Default Values for Settings</string>
    <string name="pref_title_server">Change Server</string>
    <string name="pref_cur_server">Current server: %s</string>
    <string name="pref_cur_percent">Current percentage: %d%%</string>
    <string name="pref_title_multiple_tests">Run multiple tests to confirm differentiation</string>
    <string name="pref_summary_multiple_tests">To precisely confirm differentiation</string>
    <string name="pref_title_threshold_area">Threshold percentage for area test</string>
    <string name="pref_title_threshold_ks2p">Threshold percentage for KS2 P value test</string>
    <string name="pref_server_key" translatable="false">pref_server</string>
    <string name="pref_area_key" translatable="false">pref_threshold_area</string>
    <string name="pref_ks2p_key" translatable="false">pref_threshold_ks2p</string>
    <string name="pref_switch_key" translatable="false">pref_switch</string>
    <string name="app_throughput">App Throughput</string>
    <string name="nonapp_throughput">Non-App Throughput</string>
    <string name="nav_about">Why Wehe</string>
    <string name="nav_run">Differentiation Tests</string>
    <string name="nav_run_port">Port Tests</string>
    <string name="nav_results">Previous Results</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_functionality">How it Works</string>
    <string name="nav_stats">View Online Dashboard</string>
    <string name="start_test">Start Test</string>
    <string name="rerun">Re-run</string>
    <string name="localize_diff">Who\'s at fault?</string>
    <string name="ongoing_replay_image">ongoing replay image</string>
    <string name="replay_header_text">Test: %s of 2</string>
    <string name="background_test_instructions">Please keep the app running in the background. We are testing selected apps to measure potential throttling by your carrier.</string>
    <string name="apps_selected_for_testing">Apps Selected for Testing</string>
    <string name="carrier_network">Carrier Network</string>
    <string name="test_type">Type of Test</string>
    <string name="cancel_test">Cancel Test</string>
    <string name="test_status">Test Status</string>
    <string name="current_testing_app">Currently Testing</string>
    <string name="background_replay_header_text">Background Tests in Progress</string>
    <string name="test_progress">Test Progress</string>
</resources>