<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/replay_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <include
        android:id="@+id/replay_bar"
        layout="@layout/app_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/appsRecyclerView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/prgBarLayout"
        android:scrollbarStyle="outsideOverlay" />

    <LinearLayout
        android:id="@+id/prgBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerLayout"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:background="?android:attr/colorBackground"/>

        <ProgressBar
            android:id="@+id/prgBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:max="100"
            android:progress="0"
            android:progressTint="@color/wehe_blue"
            android:background="?android:attr/colorBackground"
            android:visibility="gone" />

        <Space
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:background="?android:attr/colorBackground"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/actionBtnsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rerunButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="@color/wehe_blue"
            android:text="@string/rerun"
            android:textColor="@color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/localizeDiffButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:background="@color/wehe_blue"
            android:text="@string/localize_diff"
            android:textColor="@color/white"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/replay_bar"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="?android:attr/colorBackground">

        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:contentDescription="@string/ongoing_replay_image"
            android:scaleType="fitCenter"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/headerText"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="@string/replay_header_text"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

</RelativeLayout>
