<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/dpi_bar"
        layout="@layout/app_bar" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:onClick="runTest"
        android:text="@string/start_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="@dimen/app_icon"
        android:layout_height="@dimen/app_icon"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dpi_bar"
        app:srcCompat="@drawable/hangouts" />

    <TextView
        android:id="@+id/app_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/Viber"
        android:textSize="@dimen/text_small"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/app_icon"
        app:layout_constraintTop_toBottomOf="@+id/dpi_bar" />

    <TextView
        android:id="@+id/app_size_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/Viber"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toEndOf="@+id/app_icon"
        app:layout_constraintStart_toStartOf="@id/app_name_textview"
        app:layout_constraintTop_toBottomOf="@+id/app_name_textview" />

    <TextView
        android:id="@+id/app_time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/Viber"
        android:textSize="@dimen/text_small"
        app:layout_constraintBottom_toBottomOf="@+id/app_icon"
        app:layout_constraintStart_toEndOf="@+id/app_icon"
        app:layout_constraintStart_toStartOf="@id/app_name_textview"
        app:layout_constraintTop_toBottomOf="@+id/app_size_textview" />

    <TextView
        android:id="@+id/xputTestTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/nonapp_throughput"
        app:layout_constraintStart_toStartOf="@id/app_icon"
        app:layout_constraintTop_toBottomOf="@+id/app_icon" />

    <TextView
        android:id="@+id/xputOriginalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/app_throughput"
        app:layout_constraintStart_toStartOf="@id/app_icon"
        app:layout_constraintTop_toBottomOf="@+id/xputTestTitle" />

    <TextView
        android:id="@+id/diff_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="@id/app_icon"
        app:layout_constraintTop_toBottomOf="@+id/xputOriginalTitle" />

    <TextView
        android:id="@+id/xputOriginalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_icon" />

    <TextView
        android:id="@+id/xputTestValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xputOriginalValue" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diff_status_tv" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>